Pre-entrega-final-3

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -8,7 +8,8 @@
         <p>Titulo: {{this.title}}</p>
         <p>Descripcion: {{this.description}}</p>
         <p>Categoria: {{this.category}}</p>
-        <button>agregar al carrito</button>
+        <p>Codigo: {{this.code}}</p>
+        <button class="addProduct">agregar al carrito</button>
     </div>
     <br />
     {{/each}}
